--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="docPanelsColors">#EF6C00</color>
+    <color name="chosenElement">#ff265fef</color>
+    <color name="white">#ffe7eaef</color>
 </resources>
