--- a/app/src/main/res/layout/testing_nav.xml
+++ b/app/src/main/res/layout/testing_nav.xml
@@ -1,38 +1,16 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MyActivity"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:weightSum="1">
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_ingridients"
-        android:id="@+id/addIngBtn"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.65"
-        android:layout_marginTop="70dp"/>
-
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="500dp"
-        android:id="@+id/listView"
-        android:layout_below="@+id/addIngBtn"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="0dp"
-        android:layout_weight="0.72" />
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/docPanelsColors"
+        android:background="@color/primary"
         app:theme="@style/ToolbarTheme"
         app:popupTheme="@style/Theme.AppCompat"/>
 
@@ -53,6 +31,4 @@
     </android.support.v4.widget.DrawerLayout>
 
 
-</RelativeLayout>
-
-
+</LinearLayout>
