--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,30 +1,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyActivity"
     android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:weightSum="1">
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_ingridients"
-        android:id="@+id/addIngBtn"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.65"
-        android:layout_marginTop="70dp"/>
+    android:weightSum="1"
+    tools:context=".MyActivity">
 
     <ListView
+        android:id="@+id/listView"
         android:layout_width="wrap_content"
         android:layout_height="500dp"
-        android:id="@+id/listView"
-        android:layout_below="@+id/addIngBtn"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/addIngBtn"
         android:layout_marginTop="0dp"
         android:layout_weight="0.72" />
 
@@ -33,24 +22,39 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/docPanelsColors"
-        app:theme="@style/ToolbarTheme"
-        app:popupTheme="@style/Theme.AppCompat"/>
+        app:popupTheme="@style/Theme.AppCompat"
+        app:theme="@style/ToolbarTheme" />
 
-    <android.support.v4.widget.DrawerLayout
-        android:id="@+id/drawer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <FrameLayout
-            android:id="@+id/content_frame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-        <ListView
-            android:id="@android:id/list"
-            android:background="@android:color/white"
-            android:layout_width="305dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"/>
-    </android.support.v4.widget.DrawerLayout>
+    <Button
+        android:id="@+id/addIngBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.65"
+        android:text="@string/add_ingridients"
+        android:layout_below="@+id/toolbar"
+        android:layout_centerHorizontal="true"
+        android:visibility="invisible" />
+
+    <!--<android.support.v4.widget.DrawerLayout-->
+        <!--android:id="@+id/drawer"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+
+        <!--<ListView-->
+            <!--android:id="@android:id/list"-->
+            <!--android:layout_width="305dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_gravity="start"-->
+            <!--android:background="@android:color/white" />-->
+
+        <!--<FrameLayout-->
+            <!--android:id="@+id/content_frame"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_gravity="center_horizontal|top" />-->
+
+    <!--</android.support.v4.widget.DrawerLayout>-->
 
 
 </RelativeLayout>
