--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -8,14 +8,11 @@
     tools:context=".MyActivity">
 
     <ListView
-        android:id="@+id/listView"
         android:layout_width="wrap_content"
-        android:layout_height="500dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/addIngBtn"
-        android:layout_marginTop="0dp"
-        android:layout_weight="0.72" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:id="@android:id/list"
+        android:layout_below="@+id/addIngBtn"></ListView>
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -35,6 +32,15 @@
         android:layout_below="@+id/toolbar"
         android:layout_centerHorizontal="true"
         android:visibility="invisible" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SHOW SELECTED ITEMS"
+        android:id="@+id/show"
+        android:layout_above="@android:id/list"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <!--<android.support.v4.widget.DrawerLayout-->
         <!--android:id="@+id/drawer"-->
