--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:id="@android:id/list"
+        android:id="@+id/selectedList"
         android:layout_below="@+id/addIngBtn"></ListView>
 
     <android.support.v7.widget.Toolbar
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:text="SHOW SELECTED ITEMS"
         android:id="@+id/show"
-        android:layout_above="@android:id/list"
+        android:layout_below="@+id/toolbar"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
