Ability to see how many recipes is available has been added. Watching recipes coming soon.

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:id="@+id/selectedList"
-        android:layout_below="@+id/show"></ListView>
+        android:layout_below="@+id/showAvailableRecipes"></ListView>
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -25,21 +25,10 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SHOW SELECTED ITEMS"
-        android:id="@+id/show"
+        android:text="0 recipes available"
+        android:id="@+id/showAvailableRecipes"
         android:layout_below="@+id/toolbar"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/recipesAvailable"
-        android:layout_below="@+id/toolbar"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/selectedList" />
+        android:layout_centerHorizontal="true" />
 
     <!--<android.support.v4.widget.DrawerLayout-->
         <!--android:id="@+id/drawer"-->
