--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -1,26 +1,22 @@
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context="StartActivity">
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:weightSum="1"
-    tools:context=".MyActivity">
+    android:weightSum="1">
+    <!--tools:context=".MyActivity">-->
+    <include layout="@layout/toolbar_actionbar" />
 
-    <!--<ListView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_weight="1"-->
-        <!--android:id="@+id/selectedList"-->
-        <!--android:layout_below="@+id/showAvailableRecipes"></ListView>-->
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/docPanelsColors"
-        app:popupTheme="@style/Theme.AppCompat"
-        app:theme="@style/ToolbarTheme" />
 
     <Button
         android:layout_width="wrap_content"
@@ -40,14 +36,6 @@
         android:scrollbars="vertical"
         android:layout_below="@+id/showAvailableRecipes">
 
-        <!--<com.melnykov.fab.FloatingActionButton-->
-            <!--android:id="@+id/fab"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="bottom|right"-->
-            <!--android:layout_margin="16dp"-->
-            <!--android:src="@drawable/ieon"-->
-             <!--/>-->
 
     </android.support.v7.widget.RecyclerView>
 
@@ -60,27 +48,12 @@
 
         android:src="@drawable/ic_add_white_24dp" />
 
-    <!--<android.support.v4.widget.DrawerLayout-->
-        <!--android:id="@+id/drawer"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
 
-        <!--<ListView-->
-            <!--android:id="@android:id/list"-->
-            <!--android:layout_width="305dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_gravity="start"-->
-            <!--android:background="@android:color/white" />-->
-
-        <!--<FrameLayout-->
-            <!--android:id="@+id/content_frame"-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_gravity="center_horizontal|top" />-->
-
-    <!--</android.support.v4.widget.DrawerLayout>-->
 
 
 </FrameLayout>
 
+    <!-- Nav drawer -->
+    <include layout="@layout/navdrawer" />
 
+</android.support.v4.widget.DrawerLayout>
