--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,8 +40,8 @@
 
 
 
-    <color name="colorMain">#0277bd</color>
-    <color name="colorMainDark">#01579b</color>
+    <color name="colorMain">#EF6C00</color>
+    <color name="colorMainDark">#E65100</color>
     <color name="colorMainAccent">#e8eaf6</color>
     <color name="colorMainText">#ffffff</color>
     <color name="colorMainBg">#FAFAFA</color>
