--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="docPanelsColors">#EF6C00</color>
     <color name="chosenElement">#EF6C00</color>
     <color name="white">#ffffff</color>
-
+    <color name="grey">#EEEEEE </color>
 
         <color name="primary">#FF9800</color>
         <color name="primaryDark">#E65100</color>
