--- a/app/src/main/res/layout/activity_recipe_preview.xml
+++ b/app/src/main/res/layout/activity_recipe_preview.xml
@@ -37,6 +37,13 @@
         android:layout_height="match_parent"
          />
 
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/fab2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_add_white_24dp" />
     <FrameLayout
         android:id="@+id/header"
         android:layout_width="match_parent"
