--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageButton"
         android:layout_gravity="center_horizontal|top"
-        android:src="@drawable/example"
+        android:src="@drawable/interior_croped"
         android:layout_marginBottom="320dp"
         android:layout_marginTop="56dp" />
 
@@ -69,6 +69,24 @@
         android:layout_marginTop="80dp"
         android:visibility="visible" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="рецептов доступно"
+        android:id="@+id/textView8"
+        android:layout_gravity="right|top"
+        android:layout_marginTop="180dp"
+        android:layout_marginRight="30dp"
+        android:textSize="23dp"
+        android:textColor="@color/white"
+        android:layout_alignRight="@+id/bigNum"
+       />
+
+    <RelativeLayout
+        android:layout_width="380dp"
+        android:layout_height="192dp"
+        android:layout_gravity="center_horizontal|top"
+        android:layout_marginTop="55dp"></RelativeLayout>
 </FrameLayout>
     <!-- Nav drawer -->
     <include layout="@layout/navdrawer" />
