--- a/app/src/main/res/layout/card_view_note.xml
+++ b/app/src/main/res/layout/card_view_note.xml
@@ -34,7 +34,7 @@
             android:text="Подготовка"
             android:id="@+id/textView2"
             android:paddingLeft="40dp"
-            android:layout_below="@+id/textView4"
+            android:layout_below="@+id/timeText"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:paddingTop="10dp" />
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="2 часа"
-            android:id="@+id/textView4"
+            android:id="@+id/timeText"
             android:textColor="#FF9800"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
@@ -65,9 +65,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="4 порции"
-            android:id="@+id/textView5"
-            android:layout_alignTop="@+id/textView4"
+            android:text="personsText"
+            android:id="@+id/personsText"
+            android:layout_alignTop="@+id/timeText"
             android:layout_alignLeft="@+id/textView3"
             android:layout_alignStart="@+id/textView3"
             android:textColor="#FF9800" />
@@ -89,7 +89,7 @@
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="Готовка"
             android:id="@+id/textView7"
-            android:layout_below="@+id/textView4"
+            android:layout_below="@+id/timeText"
             android:layout_centerHorizontal="true"
             android:paddingTop="10dp" />
 
