--- a/app/src/main/res/layout/card_view_desc.xml
+++ b/app/src/main/res/layout/card_view_desc.xml
@@ -11,18 +11,19 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="wrap_content"
         android:id="@+id/Rel">
 
         <TextView
             android:id="@+id/card_view_title"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
+            android:gravity="center"
             android:textColor="#FF9800"
             android:textSize="24sp"
-            android:text="Sample_Text"
+            android:text="Описание"
             android:paddingTop="10dp"
             android:paddingLeft="10dp" />
 
@@ -35,8 +36,7 @@
             android:paddingLeft="12dp"
             android:paddingTop="20dp"
             android:gravity="left"
-            android:layout_alignBottom="@+id/card_view_title"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/card_view_title" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
