--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageButton"
         android:layout_gravity="center_horizontal|top"
-        android:src="@drawable/interior_croped"
+        android:src="@drawable/interior"
         android:layout_marginBottom="320dp"
         android:layout_marginTop="56dp" />
 
