--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -40,9 +40,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/imageButton"
         android:layout_gravity="center_horizontal|top"
-        android:src="@drawable/interior"
         android:layout_marginBottom="320dp"
-        android:layout_marginTop="56dp" />
+        android:layout_marginTop="56dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/interiorpng"
+        android:padding="0dp" />
 
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/recycler_view"
@@ -59,14 +61,14 @@
 
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="17"
+        android:text="5"
         android:id="@+id/bigNum"
         android:textColor="@color/white"
-
+        
         android:textSize="130dp"
 
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="60dp"
         android:visibility="visible" />
 
     <TextView
@@ -75,7 +77,7 @@
         android:text="рецептов доступно"
         android:id="@+id/textView8"
         android:layout_gravity="right|top"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="170dp"
         android:layout_marginRight="30dp"
         android:textSize="23dp"
         android:textColor="@color/white"
