Text of steps on MaterialTabs has been added. Some little bugs on RecipePreview fixed.

--- a/app/src/main/res/values/steps.xml
+++ b/app/src/main/res/values/steps.xml
@@ -17,6 +17,40 @@
     <string name="snacks_stuffed_eggs15">Полученной массой нафаршировать половинки яиц.</string>
     <string name="snacks_stuffed_eggs16">Приятного аппетита!</string>
 
+    <string-array name="snacks_stuffed_eggs">
+        <item>Лук мелко нарезать</item>
+        <item>Морковь натереть на мелкой терке</item>
+        <item>Зелень мелко нарезать.</item>
+        <item>Яйца разрезать на две части.</item>
+        <item>Вынуть желтки. </item>
+        <item>Желтки натереть на мелкой терке.</item>
+        <item>На растительном масле обжарить лук.</item>
+        <item>Добавить морковь, обжарить.</item>
+        <item>Добавить грибы, посолить, поперчить. Жарить около 20–25 минут.  Остудить.</item>
+        <item>Грибы с луком и морковью положить в блендер</item>
+        <item>Измельчить.</item>
+        <item>>Добавить желтки, перемешать.</item>
+        <item>Добавить зелень, перемешать.</item>
+        <item>Добавить немного майонеза, перемешать,</item>
+        <item>Полученной массой нафаршировать половинки яиц.</item>
+    </string-array>
+
+    <string-array name="snacks_pate_with_chicken">
+        <item> Желатин замочить в 150 мл холодной кипяченой воды и оставить на 1 час. </item>
+    <item> Лук мелко нарезать.
+        Помидоры нарезать кубиками.  Зелень мелко нарезать.</item>
+        <item> Морковь (сырую) натереть на мелкой терке. Сыр натереть на мелкой терке.  </item>
+        <item> Обжарить лук на растительном масле до золотистого цвета </item>
+        <item> Добавить печень, посолить, жарить до готовности (10–15 минут). Остудить. </item>
+    <item> Желатин довести до кипения, но не кипятить.
+        Затем немного остудить. Пропустить печень через мясорубку. </item>
+        <item> Смешать печень и морковь.  Добавить половину желатина в печеночную массу, перемешать.</item>
+        <item> Смешать сыр, помидоры, зелень. Добавить оставшийся желатин в сырную массу, перемешать. </item>
+    <item> Выложить половину печени в форму (я использовала форму размером 11×23 см, и высотой 5 см), разровнять . На печень выложить весь сыр, разровнять.
+        На сыр выложить оставшуюся печень, разровнять. Поставить в холодильник на 5–6 часов </item>
+    </string-array>
+
+
     <string name="snacks_jellied_meat1">Положить мясо, почищенные морковь и лук в кастрюлю, залить 1.5 л воды, варить 1 час.</string>
     <string name="snacks_jellied_meat2">За 15 минут до готовности добавить лавровый лист, перец, посолить.</string>
     <string name="snacks_jellied_meat3">Желатин замочить в 150 мл холодной кипяченой воды и оставить на то время, которое указано на упаковке.</string>
