--- a/app/src/main/res/layout/card_recipe_preview_ingridients.xml
+++ b/app/src/main/res/layout/card_recipe_preview_ingridients.xml
@@ -28,7 +28,7 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:layout_below="@+id/textView4"
-            />
+            android:paddingBottom="15dp" />
 
         <TextView
             android:id="@+id/textView4"
