--- a/app/src/main/res/layout/card_view_desc.xml
+++ b/app/src/main/res/layout/card_view_desc.xml
@@ -37,6 +37,7 @@
             android:paddingTop="20dp"
             android:gravity="left"
             android:layout_centerHorizontal="true"
-            android:layout_below="@+id/card_view_title" />
+            android:layout_below="@+id/card_view_title"
+            android:paddingBottom="15dp" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
