--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -89,6 +89,16 @@
         android:layout_height="192dp"
         android:layout_gravity="center_horizontal|top"
         android:layout_marginTop="55dp"></RelativeLayout>
+
+    <ImageView
+        android:layout_width="222dp"
+        android:layout_height="359dp"
+        android:id="@+id/imageView"
+        android:layout_gravity="center"
+        android:src="@drawable/nulljpg"
+        android:layout_marginTop="90dp"
+        android:visibility="invisible" />
+
 </FrameLayout>
     <!-- Nav drawer -->
     <include layout="@layout/navdrawer" />
