--- a/app/src/main/res/layout/activity_recipe_preview.xml
+++ b/app/src/main/res/layout/activity_recipe_preview.xml
@@ -23,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/flexible_space_image_height"
         android:scaleType="centerCrop"
-        android:src="@drawable/example" />
+        android:src="@drawable/tetet" />
 
     <View
         android:id="@+id/list_background"
