--- a/app/src/main/res/layout/card_view_layout.xml
+++ b/app/src/main/res/layout/card_view_layout.xml
@@ -21,6 +21,7 @@
             android:layout_centerHorizontal="true"
             android:gravity="center"
             android:textColor="@android:color/black"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+        android:fontFamily="sans-serif-condensed" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
