--- a/app/src/main/res/layout/activity_search_ingredients.xml
+++ b/app/src/main/res/layout/activity_search_ingredients.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="@color/grey">
 
     <EditText
         android:layout_width="match_parent"
@@ -10,9 +11,11 @@
         android:id="@+id/findIngsET"
         android:layout_gravity="center_horizontal" />
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@+id/findedIngsRecycler"
-        android:layout_gravity="center_horizontal" />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/findedIngsListView"
+        android:layout_gravity="center_horizontal"
+        android:background="@color/grey"/>
+
 </LinearLayout>
