--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/catgrid">
 
-    <ImageButton
-        android:layout_width="192dp"
-        android:layout_height="189dp"
-        android:id="@+id/imageButton2"
+    <ImageView
+        android:layout_width="169dp"
+        android:layout_height="169dp"
+        android:id="@+id/imageView2"
         android:src="@drawable/item_cat"
-        android:scaleType="centerCrop"
-        android:adjustViewBounds="false"
-        android:clickable="false" />
+        android:layout_marginLeft="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="22dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/textView5"
-        android:fontFamily="sans-serif-condensed" />
+        android:layout_alignBottom="@+id/imageView2"
+        android:layout_alignLeft="@+id/imageView2"
+        android:layout_alignStart="@+id/imageView2"
+        android:layout_marginLeft="35dp"
+        android:layout_marginBottom="15dp" />
 
-</LinearLayout>
+</RelativeLayout>
