Activity of available reciepes.
Recycler view added instead of listview.

--- a/app/src/main/res/layout/activity_list_of_available_recipes.xml
+++ b/app/src/main/res/layout/activity_list_of_available_recipes.xml
@@ -13,12 +13,11 @@
         app:popupTheme="@style/Theme.AppCompat"
         app:theme="@style/ToolbarTheme" />
 
-    <ListView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/availableRecipes"
-        android:choiceMode="multipleChoice"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/toolbar" />
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/availableRecipesLW"
+        android:layout_below="@+id/toolbar"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
